--- a/src/About.scss
+++ b/src/About.scss
@@ -1,4 +1,4 @@
-@import "./constants";
+@import "./_constants";
 
 .main-container-a {
   padding: 32px 23px 20px 23px;
@@ -32,11 +32,6 @@
 
 .paragraphs-a {
   margin: 0 0 1em 0;
-  @include text1-regular;
-}
-
-.text-bold-a {
-  @include text-bold;
 }
 
 .divider-horizontal-a {
